--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "frontend",
+  "type": "module",
+  "name": "healthmate_",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,10 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^5.3.4",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "http://localhost:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
